TCC/TCC/force-app/main/default/objects/Projeto__c/Projeto__c.object-meta.xml
<CustomObject>
    <description>Administrar os projetos sociais das instituições não governamentais beneficiadas pelo software</description>
    <label>Projeto</label>
    <nameField>
        <label>Nome do Projeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projetos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>