TCC/TCC/force-app/main/default/objects/Projeto__c/fields/Atendidos__c.field-meta.xml
<CustomField>
    <fullName>Atendidos__c</fullName>
    <formula>BeneficiariosDiretos__c  +  BeneficiariosIndiretos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atendidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>