TCC/TCC/force-app/main/default/objects/Projeto__c/fields/BeneficiariosDiretos__c.field-meta.xml
<CustomField>
    <fullName>BeneficiariosDiretos__c</fullName>
    <label>Beneficiários Diretos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>