TCC/TCC/force-app/main/default/objects/Projeto__c/fields/BeneficiariosIndiretos__c.field-meta.xml
<CustomField>
    <fullName>BeneficiariosIndiretos__c</fullName>
    <label>Beneficiários Indiretos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>