TCC/TCC/force-app/main/default/objects/Projeto__c/fields/PossuiDocumentacao__c.field-meta.xml
<CustomField>
    <fullName>PossuiDocumentacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui Documentação</label>
    <type>Checkbox</type>
</CustomField>