TCC/TCC/force-app/main/default/objects/Projeto__c/fields/StatusProjeto__c.field-meta.xml
<CustomField>
    <fullName>StatusProjeto__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando Resposta</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>