TCC/TCC/force-app/main/default/objects/Projeto__c/fields/TipoDocumentacao__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumentacao__c</fullName>
    <label>Tipo da Documentação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoDocumentacao</valueSetName>
    </valueSet>
</CustomField>