TCC/TCC/force-app/main/default/objects/Projeto__c/validationRules/DataInicioNaoPodeSerMaiorQueADataFim.validationRule-meta.xml
<ValidationRule>
    <fullName>DataInicioNaoPodeSerMaiorQueADataFim</fullName>
    <active>true</active>
    <errorConditionFormula>DataInicioProjeto__c  &gt;  DataTerminoProjeto__c</errorConditionFormula>
    <errorMessage>A data de término do projeto não pode ser anterior a data de início</errorMessage>
</ValidationRule>