TCC/TCC/force-app/main/default/objects/Projeto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descricao__c</columns>
    <columns>DataInicioProjeto__c</columns>
    <columns>StatusProjeto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>